--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -30,8 +30,8 @@ body {
     display: flex;
     flex: 1 1 100%;
     overflow: hidden;
-    #app > div,
-    #app {
+    #wewetap-app > div,
+    #wewetap-app {
         background-color: $black;
         height: 100%;
         width: 100%;
